# tick-tock

./: Cargo.toml  Makefile  README.md
data/: com.github.ankjevel.tick-tock.desktop
src/: main.rs
src/lib/: mod.rs
src/lib/config/: mod.rs  tenkft.rs
src/lib/models/: user.rs
src/lib/services/: file.rs  mod.rs  tenkfeet.rs
src/lib/views/: empty_view.rs  header.rs  mod.rs  user_view.rs  widgets.rs
