[package]
name = "tick-tock"
version = "0.1.0"
authors = ["Dennis Pettersson"]
edition = "2018"

[dependencies]
config = "0.10.1"
glib = "0.9.0"
lazy_static = "1.4.0"
serde = "1.0.104"
serde_derive = "1.0.104"
hmac-sha256 = "0.1.2"
md5 = "0.7.0"

[dependencies.gtk]
version = "0.8.0"
features = ["v3_16"]

[dependencies.gio]
version = "0.8.0"
features = ["v2_44"]

[dependencies.reqwest]
version = "0.10.0"
features = ["blocking", "json"]

[profile.release]
lto = true
panic = "abort"
opt-level = 3
